--- a/webpage/index.html
+++ b/webpage/index.html
@@ -28,8 +28,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1>Welcome to Theory</h1>
-				<p>A free responsive HTML5 website template by TEMPLATED.</p>
+				<h1>Techology Design Authority</h1>
 			</section>
 
 		<!-- One -->
